--- a/src/main/resources/public/stylesheets/main.css
+++ b/src/main/resources/public/stylesheets/main.css
@@ -19,19 +19,45 @@ li a {
     text-decoration: none;
 }
 
+strong {
+    color: #7fffd4;
+}
+
+h1 strong {
+    color: #7fffd4;
+}
+
+div.jumbotron aside img {
+    float: left;
+}
+
 .jumbotron {
-  background: #003153; 
-  color: white;
-  font-size: 16px;
+/*  background: #003153; */
+  background: #7fffd4;
+  color: green;
+  font-size: 26px;
   font-weight: 900;
   letter-spacing: .035rem;
   text-align: center;
   line-height: 1.2;
   position: absolute;
   top: 50%;
-  left: 50%;*/
+  left: 50%;
   text-shadow: 3px 3px 1px #003153;
-  padding-bottom: 80px;}
+  padding-bottom: 80px;
+  div.jumbotron h1#name strong {
+	font-family: mononoki NF;
+  }
+  .jumotron h2 {
+      font-size: 56px;
+  }
+  .jumotron .lang-logo h2 {
+      font-size: 56px;
+  }
+  .jumbotron .lang-logo h1 strong {
+      text-align: center;
+  }
+}
 
 .jumbotron .btn-primary {
     background: #FFA500;
@@ -46,7 +72,9 @@ li a {
     margin-top: -20px; 
   .jumbotron .lang-logo {
     display: block;
-    background: #B01302;
+/*    background: #B01302;*/
+    background: #7fffd4;
+    text-align: center;
     border-radius: 50%;
     overflow: hidden;
     width: 100px;
@@ -81,7 +109,7 @@ li a {
     margin: 2rem;
     padding: 1rem;
     outline-offset: 0.5rem;
-	font-family: zillaslab,palatino,"Palatino Linotype",serif;
+	font-family: Nimbus Sans;
 	letter-spacing: .035rem;
 	line-height: 1.2;
     width: auto;
