--- a/src/main/resources/public/stylesheets/main.css
+++ b/src/main/resources/public/stylesheets/main.css
@@ -1,4 +1,14 @@
 
+hr {
+    border-color: #003153;
+    overflow: hidden;
+}
+
+h1.jumbotron {
+    background-color: #003153;
+    text-align: center;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -7,13 +17,25 @@ ul {
     border: 1px solid #e7e7e7;
 }
 
+button.github:hover {
+    background-color: green;
+
+}
+
+h2 {
+    text-align: center;
+}
+
+strong {
+    text-align: center;
+}
+
 li {
     float: left;
 }
 
 li a {
     display: block;
-    color: #666;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -27,172 +49,82 @@ h1 strong {
     color: #7fffd4;
 }
 
-div.jumbotron aside img {
-    float: left;
-}
-
-.jumbotron {
-/*  background: #003153; */
-  background: #7fffd4;
-  color: green;
-  font-size: 26px;
-  font-weight: 900;
-  letter-spacing: .035rem;
-  text-align: center;
-  line-height: 1.2;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  text-shadow: 3px 3px 1px #003153;
-  padding-bottom: 80px;
-  div.jumbotron h1#name strong {
-	font-family: mononoki NF;
-  }
-  .jumotron h2 {
-      font-size: 56px;
-  }
-  .jumotron .lang-logo h2 {
-      font-size: 56px;
-  }
-  .jumbotron .lang-logo h1 strong {
-      text-align: center;
-  }
-}
-
-.jumbotron .btn-primary {
-    background: #FFA500;
-    border-color: #845ac7;}
-    .jumbotron .btn-primary:hover {
-      background: #66023C; }
-  .jumbotron p {
-    color: #d9ccee;
-    max-width: 75%;
-    margin: 1em auto 2em; }
-  .navbar + .jumbotron {
-    margin-top: -20px; 
-  .jumbotron .lang-logo {
-    display: block;
-/*    background: #B01302;*/
-    background: #7fffd4;
+div.jumbotron div.jumbotron-container {
     text-align: center;
-    border-radius: 50%;
-    overflow: hidden;
-    width: 100px;
-    height: 100px;
-    margin: auto;
-    border: 1px solid #66023C; }
-    .jumbotron .lang-logo img {
-      max-width: 100%; }
-
-.about {
-    letter-spacing: .035rem;
-    line-height: 1.2;
-    text-shadow: 3px 3px 1px #003153;
 }
 
-.experience {
+div.jumbotron {
+    margin-bottom: 0px;
+}
+
+div.jumbotron {
     background: #003153;
-    text-shadow: 3px 3px 1px #003153;
-}
-
-#education {
-    color: #003153;
-    display: block;
-    font-weight: bold;
-    font-size: 10px;
-    text-shadow: 3px 3px 1px #003153;
-    text-align: center;
-    border: 0.5rem outset pink;
-    outline: 0.5rem outset khaki;
-    box-shadow: 0 0 0 2rem skyblue;
-    border-radius: 12px;
-    margin: 2rem;
-    padding: 1rem;
-    outline-offset: 0.5rem;
-	font-family: Nimbus Sans;
-	letter-spacing: .035rem;
-	line-height: 1.2;
-    width: auto;
-    span {
-    text-decoration: underline;
+    .experience {
+        background: #003153;
+        text-shadow: 3px 3px 1px #003153;
     }
-}
 
-.skills {
-    list-style-type: upper-alpha;
-	font-family: zillaslab,palatino,"Palatino Linotype",serif;
-	letter-spacing: .035rem;
-	line-height: 1.2;
-    text-align: center;
-/*    .skills h1 .strong {*/
-    border: 0.5rem outset pink;
-    outline: 0.5rem outset khaki;
-    box-shadow: 0 0 0 2rem skyblue;
-    border-radius: 12px;
-    font-weight: bold;
-    font-size: 10px;
-    margin: 2rem;
-    padding: 1rem;
-    outline-offset: 0.5rem;
-    margin: 9;
-    text-shadow: 3px 3px 1px #003153;
-}
+    #education {
+        color: #003153;
+        display: block;
+        font-weight: 700;
+        font-size: 10px;
+        text-shadow: 3px 3px 1px #003153;
+        text-align: center;
+        border: 0.5rem outset pink;
+        outline: 0.5rem outset khaki;
+        box-shadow: 0 0 0 2rem skyblue;
+        border-radius: 12px;
+        margin: 2rem;
+        padding: 1rem;
+        outline-offset: 0.5rem;
+        font-family: Nimbus Sans;
+        letter-spacing: .035rem;
+        line-height: 1.2;
+        width: auto;
+    }
 
-.projects {
-	font-family: mononoki NF;
-    font-weight: 900;
-	letter-spacing: .035rem;
-	line-height: 1.2;
-    text-align: center;
-    color: rgb(114, 255, 114);
-    .projects .h1 .strong {
-    display: block;
-    text-shadow: 3px 3px 1px #003153;
-    border: 0.5rem outset pink;
-    outline: 0.5rem outset khaki;
-/*    color: rgb(114, 255, 114);*/
-    font-size: 16px;
-    box-shadow: 0 0 0 2rem skyblue;
-    border-radius: 12px;
-    margin: 2rem;
-    padding: 1rem;
-    outline-offset: 0.5rem;}
-}
+        .projects {
+            font-family: mononoki NF;
+            font-weight: 900;
+            letter-spacing: .035rem;
+            line-height: 1.2;
+            text-align: center;
+            color: rgb(114, 255, 114);
+        }
 
-.volunteering {
-	font-family: mononoki NF;
-    font-weight: 900;
-	letter-spacing: .035rem;
-	line-height: 1.2;
-    color: #003153;
-    display: block;
-    text-shadow: 3px 3px 1px #003153;
-    text-align: center;
-    border: 0.5rem outset pink;
-    outline: 0.5rem outset khaki;
-    box-shadow: 0 0 0 2rem skyblue;
-    border-radius: 12px;
-    margin: 2rem;
-    padding: 1rem;
-    outline-offset: 0.5rem;
-}
+        .volunteering {
+            font-family: mononoki NF;
+            font-weight: 900;
+            letter-spacing: .035rem;
+            line-height: 1.2;
+            color: #003153;
+            display: block;
+            text-shadow: 3px 3px 1px #003153;
+            text-align: center;
+            border: 0.5rem outset pink;
+            outline: 0.5rem outset khaki;
+            box-shadow: 0 0 0 2rem skyblue;
+            border-radius: 12px;
+            margin: 2rem;
+            padding: 1rem;
+            outline-offset: 0.5rem;
+        }
 
-.contact {
-	font-family: mononoki NF;
-	font-style: regular;
-	font-size: 16px;
-	letter-spacing: .035rem;
-	line-height: 1.2;
-    text-align: center;
-    color: #003153;
-    display: block;
-    text-shadow: 3px 3px 1px #003153;
-    border: 0.5rem outset pink;
-    font-weight: 900;
-    margin: 2rem;
-    padding: 1rem;
-    outline-offset: 0.5rem;
-    padding-bottom: 20px;
-}
-
-
+        .contact {
+            font-family: mononoki NF;
+            font-style: regular;
+            font-size: 16px;
+            letter-spacing: .035rem;
+            line-height: 1.2;
+            text-align: center;
+            color: #003153;
+            display: block;
+            text-shadow: 3px 3px 1px #003153;
+            border: 0.5rem outset pink;
+            font-weight: 900;
+            margin: 2rem;
+            padding: 1rem;
+            outline-offset: 0.5rem;
+            padding-bottom: 20px;
+        }
